--- a/App/app/src/main/res/layout/activity_detail_find.xml
+++ b/App/app/src/main/res/layout/activity_detail_find.xml
@@ -6,26 +6,41 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/textView74"
+        android:layout_width="wrap_content"
+        android:layout_height="34dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="11dp"
+        android:text="상세게시물"
+        android:textColor="@android:color/darker_gray"
+        android:textSize="15sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/titlebar"
+        tools:textColor="@color/black" />
+
+    <TextView
         android:id="@+id/textView45"
         android:layout_width="wrap_content"
         android:layout_height="34dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="25dp"
         android:text="목격일시 및 장소"
         android:textColor="@android:color/darker_gray"
         android:textSize="17sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/detail_find_recycler" />
+        app:layout_constraintTop_toBottomOf="@+id/detail_find_recycler"
+        tools:textColor="@color/black" />
 
     <TextView
         android:id="@+id/textView44"
         android:layout_width="wrap_content"
         android:layout_height="34dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="11dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="25dp"
         android:text="목격동물 정보"
-        android:textColor="@android:color/darker_gray"
+        android:textColor="@color/black"
         android:textSize="17sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,10 +50,10 @@
         android:id="@+id/textView36"
         android:layout_width="wrap_content"
         android:layout_height="34dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="15dp"
         android:text="목격 신고자 정보"
-        android:textColor="@android:color/darker_gray"
+        android:textColor="@color/black"
         android:textSize="17sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -48,8 +63,8 @@
         android:id="@+id/detail_find_kakaid"
         android:layout_width="150sp"
         android:layout_height="34dp"
-        android:layout_marginStart="3dp"
-        android:layout_marginTop="7dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="3dp"
         android:gravity="center_vertical"
         android:textSize="15sp"
         android:textStyle="bold"
@@ -60,7 +75,8 @@
         android:id="@+id/detail_find_feature"
         android:layout_width="276dp"
         android:layout_height="59dp"
-        android:layout_marginStart="3dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="1dp"
         android:textSize="13sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/textView55"
@@ -70,8 +86,9 @@
         android:id="@+id/detail_find_specify"
         android:layout_width="200sp"
         android:layout_height="34dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="1dp"
         android:gravity="center_vertical"
-        android:layout_marginStart="3dp"
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/textView56"
@@ -81,7 +98,8 @@
         android:id="@+id/detail_find_farColor1"
         android:layout_width="150sp"
         android:layout_height="34dp"
-        android:layout_marginStart="3dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="1dp"
         android:gravity="center_vertical"
         android:textSize="15sp"
         android:textStyle="bold"
@@ -92,11 +110,12 @@
         android:id="@+id/textView62"
         android:layout_width="100sp"
         android:layout_height="34dp"
-        android:layout_marginStart="28dp"
+        android:layout_marginStart="15dp"
         android:layout_marginTop="1dp"
-        android:background="#eff3f7"
+        android:background="#eef5ed"
         android:gravity="center"
         android:text="목격 시간"
+        android:textColor="@color/black"
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -106,9 +125,9 @@
         android:id="@+id/detail_find_address"
         android:layout_width="280dp"
         android:layout_height="34dp"
-        android:layout_marginStart="3dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="3dp"
         android:gravity="center_vertical"
-        android:layout_marginTop="9dp"
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/textView50"
@@ -118,7 +137,8 @@
         android:id="@+id/detail_find_gender"
         android:layout_width="200sp"
         android:layout_height="34dp"
-        android:layout_marginStart="3dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="1dp"
         android:gravity="center_vertical"
         android:textSize="15sp"
         android:textStyle="bold"
@@ -129,8 +149,8 @@
         android:id="@+id/detail_find_age"
         android:layout_width="100sp"
         android:layout_height="34dp"
-        android:layout_marginStart="3dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="63dp"
         android:gravity="center_vertical"
         android:textSize="15sp"
         android:textStyle="bold"
@@ -141,11 +161,12 @@
         android:id="@+id/textView57"
         android:layout_width="100sp"
         android:layout_height="34dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="7dp"
-        android:background="#eff3f7"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="3dp"
+        android:background="#eef5ed"
         android:gravity="center"
         android:text="카카오톡 Id"
+        android:textColor="@color/black"
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -155,10 +176,12 @@
         android:id="@+id/textView56"
         android:layout_width="100sp"
         android:layout_height="34dp"
-        android:layout_marginStart="28dp"
-        android:background="#eff3f7"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="1dp"
+        android:background="#eef5ed"
         android:gravity="center"
         android:text="추정 품종"
+        android:textColor="@color/black"
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -168,10 +191,12 @@
         android:id="@+id/textView55"
         android:layout_width="100sp"
         android:layout_height="34dp"
-        android:layout_marginStart="28dp"
-        android:background="#eff3f7"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="1dp"
+        android:background="#eef5ed"
         android:gravity="center"
         android:text="특징"
+        android:textColor="@color/black"
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -181,10 +206,12 @@
         android:id="@+id/textView54"
         android:layout_width="100sp"
         android:layout_height="34dp"
-        android:layout_marginStart="28dp"
-        android:background="#eff3f7"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="1dp"
+        android:background="#eef5ed"
         android:gravity="center"
         android:text="성별"
+        android:textColor="@color/black"
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -194,10 +221,12 @@
         android:id="@+id/textView53"
         android:layout_width="100sp"
         android:layout_height="34dp"
-        android:layout_marginStart="28dp"
-        android:background="#eff3f7"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="1dp"
+        android:background="#eef5ed"
         android:gravity="center"
         android:text="색상"
+        android:textColor="@color/black"
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -207,8 +236,9 @@
         android:id="@+id/detail_find_time"
         android:layout_width="280dp"
         android:layout_height="34dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="1dp"
         android:gravity="center_vertical"
-        android:layout_marginStart="3dp"
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/textView62"
@@ -218,11 +248,12 @@
         android:id="@+id/textView51"
         android:layout_width="100sp"
         android:layout_height="34dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="14dp"
-        android:background="#eff3f7"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="3dp"
+        android:background="#eef5ed"
         android:gravity="center"
         android:text="추정 나이"
+        android:textColor="@color/black"
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -231,7 +262,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/titlebar"
         android:layout_width="413dp"
-        android:layout_height="90dp"
+        android:layout_height="70sp"
         android:background="#94C67E"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -239,23 +270,23 @@
 
         <ImageView
             android:id="@+id/backbtn"
-            android:layout_width="42dp"
-            android:layout_height="42dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="28dp"
-            android:layout_marginEnd="96dp"
-            app:layout_constraintEnd_toStartOf="@+id/logo"
+            android:layout_width="40sp"
+            android:layout_height="40sp"
+            android:layout_marginStart="23dp"
+            android:layout_marginTop="16dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/backbutton" />
+            app:srcCompat="@drawable/backbutton1" />
 
         <ImageView
             android:id="@+id/logo"
-            android:layout_width="104dp"
-            android:layout_height="60dp"
+            android:layout_width="80sp"
+            android:layout_height="48sp"
             android:layout_marginStart="154dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="10dp"
             android:layout_marginEnd="155dp"
+            android:layout_marginBottom="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -263,41 +294,37 @@
 
         <ImageView
             android:id="@+id/profile"
-            android:layout_width="70dp"
-            android:layout_height="63dp"
-            android:layout_marginStart="67dp"
-            android:layout_marginTop="19dp"
-            android:layout_marginEnd="34dp"
-            android:layout_marginBottom="20dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_width="42sp"
+            android:layout_height="42sp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="23dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/logo"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.666"
             app:srcCompat="@drawable/profile" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/detail_find_recycler"
-        android:layout_width="410dp"
-        android:layout_height="190dp"
-        android:layout_marginTop="2dp"
+        android:layout_width="360sp"
+        android:layout_height="150sp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.313"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titlebar" />
+        app:layout_constraintTop_toBottomOf="@+id/textView74" />
 
     <TextView
         android:id="@+id/textView50"
         android:layout_width="100sp"
         android:layout_height="34dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="9dp"
-        android:background="#eff3f7"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="3dp"
+        android:background="#eef5ed"
         android:gravity="center"
         android:text="목격 장소"
+        android:textColor="@color/black"
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -309,8 +336,9 @@
         android:layout_height="37dp"
         android:layout_marginTop="3dp"
         android:layout_marginEnd="16dp"
-        android:background="@drawable/button_round"
+        android:background="@drawable/rect_round2"
         android:text="찾았어요!"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/delete_btn2" />
 
@@ -321,8 +349,9 @@
         android:layout_marginTop="2dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="3dp"
-        android:background="@drawable/button_round"
+        android:background="@drawable/rect_round2"
         android:text="게시물 삭제"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/FindBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/detail_find_feature" />
