--- a/App/app/src/main/res/layout/forumitem.xml
+++ b/App/app/src/main/res/layout/forumitem.xml
@@ -3,14 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="180dp">
+    android:layout_height="214sp">
 
     <TextView
         android:id="@+id/forumcontent"
         android:layout_width="200dp"
-        android:layout_height="18dp"
+        android:layout_height="34sp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="14dp"
+        android:layout_marginTop="1dp"
+        android:gravity="center|left"
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/textView61"
@@ -19,12 +20,13 @@
     <TextView
         android:id="@+id/textView61"
         android:layout_width="100dp"
-        android:layout_height="22dp"
+        android:layout_height="34sp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="14dp"
+        android:layout_marginTop="1dp"
         android:background="#eef5ed"
         android:gravity="center"
         android:text="내용"
+        android:textColor="@color/black"
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,9 +35,10 @@
     <TextView
         android:id="@+id/forumname"
         android:layout_width="200dp"
-        android:layout_height="22dp"
+        android:layout_height="34sp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="3dp"
+        android:layout_marginTop="16dp"
+        android:gravity="center|left"
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/textView58"
@@ -44,9 +47,10 @@
     <TextView
         android:id="@+id/forumowner"
         android:layout_width="150dp"
-        android:layout_height="22dp"
+        android:layout_height="34sp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="14dp"
+        android:layout_marginTop="1dp"
+        android:gravity="center|left"
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/textView59"
@@ -55,12 +59,13 @@
     <TextView
         android:id="@+id/textView58"
         android:layout_width="100dp"
-        android:layout_height="22dp"
+        android:layout_height="34sp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="3dp"
+        android:layout_marginTop="16dp"
         android:background="#eef5ed"
         android:gravity="center"
         android:text="게시물 제목"
+        android:textColor="@color/black"
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -69,12 +74,13 @@
     <TextView
         android:id="@+id/textView59"
         android:layout_width="100dp"
-        android:layout_height="22dp"
+        android:layout_height="34sp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="14dp"
+        android:layout_marginTop="1dp"
         android:background="#eef5ed"
         android:gravity="center"
         android:text="작성자"
+        android:textColor="@color/black"
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -83,9 +89,10 @@
     <TextView
         android:id="@+id/forumtime"
         android:layout_width="200dp"
-        android:layout_height="22dp"
+        android:layout_height="34sp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="14dp"
+        android:layout_marginTop="1dp"
+        android:gravity="center|left"
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/textView60"
@@ -94,12 +101,13 @@
     <TextView
         android:id="@+id/textView60"
         android:layout_width="100dp"
-        android:layout_height="22dp"
+        android:layout_height="34sp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="14dp"
+        android:layout_marginTop="1dp"
         android:background="#eef5ed"
         android:gravity="center"
         android:text="업로드 시간"
+        android:textColor="@color/black"
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -109,16 +117,14 @@
         android:id="@+id/detail_forum"
         android:layout_width="68dp"
         android:layout_height="30dp"
-        android:layout_marginTop="9dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="116dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="16dp"
         android:background="@drawable/rect_round2"
-        android:text="글   보기"
+        android:text="더보기"
         android:textColor="@color/white"
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/forumname" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
