--- a/App/app/src/main/res/layout/missitem.xml
+++ b/App/app/src/main/res/layout/missitem.xml
@@ -9,10 +9,11 @@
     <TextView
         android:id="@+id/missfeature"
         android:layout_width="147dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="14dp"
-        android:layout_marginTop="9dp"
-        android:gravity="left"
+        android:layout_height="58sp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="2dp"
+        android:gravity="center|left"
+        android:textColor="@color/black"
         android:textSize="12sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/textview7"
@@ -22,9 +23,10 @@
         android:id="@+id/missspecify"
         android:layout_width="147dp"
         android:layout_height="25dp"
-        android:layout_marginStart="14dp"
-        android:layout_marginTop="9dp"
-        android:gravity="left"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="2dp"
+        android:gravity="center|left"
+        android:textColor="@color/black"
         android:textSize="12sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/textview6"
@@ -34,9 +36,10 @@
         android:id="@+id/misskakaoid"
         android:layout_width="147dp"
         android:layout_height="25dp"
-        android:layout_marginStart="14dp"
-        android:layout_marginTop="9dp"
-        android:gravity="left"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="2dp"
+        android:gravity="center|left"
+        android:textColor="@color/black"
         android:textSize="12sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/textview8"
@@ -46,9 +49,10 @@
         android:id="@+id/misstime"
         android:layout_width="147dp"
         android:layout_height="25dp"
-        android:layout_marginStart="14dp"
-        android:layout_marginTop="9dp"
-        android:gravity="left"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="2dp"
+        android:gravity="center|left"
+        android:textColor="@color/black"
         android:textSize="12sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/textview5"
@@ -59,10 +63,11 @@
         android:layout_width="57dp"
         android:layout_height="25dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="9dp"
+        android:layout_marginTop="2dp"
         android:background="#eef5ed"
         android:gravity="center"
         android:text="실종 장소"
+        android:textColor="@color/black"
 
         android:textSize="11sp"
         android:textStyle="bold"
@@ -74,10 +79,11 @@
         android:layout_width="57dp"
         android:layout_height="25dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="9dp"
+        android:layout_marginTop="2dp"
         android:background="#eef5ed"
         android:gravity="center"
         android:text="카카오톡 id"
+        android:textColor="@color/black"
 
         android:textSize="11sp"
         android:textStyle="bold"
@@ -89,10 +95,11 @@
         android:layout_width="57dp"
         android:layout_height="25dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="9dp"
+        android:layout_marginTop="2dp"
         android:background="#eef5ed"
         android:gravity="center"
         android:text="품종"
+        android:textColor="@color/black"
 
         android:textSize="12sp"
         android:textStyle="bold"
@@ -104,10 +111,11 @@
         android:layout_width="57dp"
         android:layout_height="25dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="9dp"
+        android:layout_marginTop="2dp"
         android:background="#eef5ed"
         android:gravity="center"
         android:text="실종 날짜"
+        android:textColor="@color/black"
 
         android:textSize="12sp"
         android:textStyle="bold"
@@ -120,10 +128,12 @@
         android:layout_height="25dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="16dp"
+
         android:background="#eef5ed"
         android:gravity="center"
         android:text="이름"
 
+        android:textColor="@color/black"
         android:textSize="12sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/missimg"
@@ -132,12 +142,13 @@
     <TextView
         android:id="@+id/textview7"
         android:layout_width="57dp"
-        android:layout_height="25dp"
+        android:layout_height="58sp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="9dp"
+        android:layout_marginTop="2dp"
         android:background="#eef5ed"
         android:gravity="center"
         android:text="특징"
+        android:textColor="@color/black"
 
         android:textSize="12sp"
         android:textStyle="bold"
@@ -148,9 +159,10 @@
         android:id="@+id/missname"
         android:layout_width="147dp"
         android:layout_height="25dp"
-        android:layout_marginStart="14dp"
+        android:layout_marginStart="5dp"
         android:layout_marginTop="16dp"
-        android:gravity="left"
+        android:gravity="center|left"
+        android:textColor="@color/black"
         android:textSize="12sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/textview111"
@@ -170,9 +182,10 @@
         android:id="@+id/missaddress"
         android:layout_width="147dp"
         android:layout_height="25dp"
-        android:layout_marginStart="14dp"
-        android:layout_marginTop="9dp"
-        android:gravity="left"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="2dp"
+        android:gravity="center|left"
+        android:textColor="@color/black"
         android:textSize="12sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/textview9"
