--- a/App/app/src/main/res/drawable/rect_round.xml
+++ b/App/app/src/main/res/drawable/rect_round.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:padding="10dp"
     android:shape="rectangle" >
-    <solid android:color="#A6D68F" />
+    <solid android:color="#66A05D" />
     <corners
         android:bottomLeftRadius="12dp"
         android:bottomRightRadius="12dp"
