--- a/App/app/src/main/res/layout/activity_detail_forum.xml
+++ b/App/app/src/main/res/layout/activity_detail_forum.xml
@@ -8,61 +8,57 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/titlebar"
         android:layout_width="413dp"
-        android:layout_height="90dp"
+        android:layout_height="70sp"
         android:background="#94C67E"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/backbtn"
-            android:layout_width="42dp"
-            android:layout_height="42dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="28dp"
-            android:layout_marginEnd="96dp"
-            app:layout_constraintEnd_toStartOf="@+id/logo"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/backbutton" />
-
-        <ImageView
             android:id="@+id/logo"
-            android:layout_width="104dp"
-            android:layout_height="60dp"
+            android:layout_width="80sp"
+            android:layout_height="48sp"
             android:layout_marginStart="154dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="10dp"
             android:layout_marginEnd="155dp"
+            android:layout_marginBottom="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/img" />
 
         <ImageView
-            android:id="@+id/profile"
-            android:layout_width="70dp"
-            android:layout_height="63dp"
-            android:layout_marginStart="67dp"
-            android:layout_marginTop="19dp"
-            android:layout_marginEnd="34dp"
-            android:layout_marginBottom="20dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/logo"
+            android:id="@+id/backbtn"
+            android:layout_width="42dp"
+            android:layout_height="42dp"
+            android:layout_marginStart="23dp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.666"
+            app:srcCompat="@drawable/backbutton1" />
+
+        <ImageView
+            android:id="@+id/profile"
+            android:layout_width="42sp"
+            android:layout_height="42sp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="23dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/profile" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout2"
-        android:layout_width="410dp"
+        android:layout_width="350dp"
         android:layout_height="600dp"
+        android:layout_marginStart="25dp"
         android:layout_marginTop="24dp"
+        android:layout_marginEnd="25dp"
         android:layout_marginBottom="55dp"
-        android:background="#eef5ed"
+        android:background="@drawable/rect_round4"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -70,11 +66,12 @@
 
         <TextView
             android:id="@+id/detail_title"
-            android:layout_width="250dp"
-            android:layout_height="25dp"
-            android:layout_marginStart="14dp"
+            android:layout_width="231dp"
+            android:layout_height="40sp"
+            android:layout_marginStart="6dp"
             android:layout_marginTop="18dp"
             android:background="@color/white"
+            android:gravity="center"
             android:textColor="@color/black"
             android:textSize="17sp"
             android:textStyle="bold"
@@ -83,37 +80,27 @@
 
         <TextView
             android:id="@+id/textView64"
-            android:layout_width="50dp"
-            android:layout_height="25dp"
-            android:layout_marginStart="38dp"
-            android:layout_marginTop="73dp"
+            android:layout_width="85sp"
+            android:layout_height="40sp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="24dp"
+            android:background="#b4c5b0"
+            android:gravity="center"
             android:text="내 용 "
-            android:textColor="@android:color/darker_gray"
+            android:textColor="@color/black"
             android:textSize="17sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView63" />
 
         <TextView
-            android:id="@+id/detail_content"
-            android:layout_width="270dp"
-            android:layout_height="300dp"
-            android:layout_marginStart="11dp"
-            android:layout_marginTop="73dp"
-            android:background="@color/white"
-            android:textColor="@color/black"
-            android:textSize="17sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toEndOf="@+id/textView64"
-            app:layout_constraintTop_toBottomOf="@+id/textView63" />
-
-        <TextView
             android:id="@+id/detail_user"
-            android:layout_width="250dp"
-            android:layout_height="25dp"
-            android:layout_marginStart="14dp"
-            android:layout_marginTop="51dp"
+            android:layout_width="231dp"
+            android:layout_height="40sp"
+            android:layout_marginStart="6dp"
+            android:layout_marginTop="24dp"
             android:background="@color/white"
+            android:gravity="center"
             android:textColor="@color/black"
             android:textSize="17sp"
             android:textStyle="bold"
@@ -122,12 +109,14 @@
 
         <TextView
             android:id="@+id/textView65"
-            android:layout_width="50dp"
-            android:layout_height="25dp"
-            android:layout_marginStart="38dp"
+            android:layout_width="85sp"
+            android:layout_height="40sp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="18dp"
+            android:background="#b4c5b0"
+            android:gravity="center"
             android:text="제목"
-            android:textColor="@android:color/darker_gray"
+            android:textColor="@color/black"
             android:textSize="17sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
@@ -135,12 +124,14 @@
 
         <TextView
             android:id="@+id/textView66"
-            android:layout_width="50dp"
-            android:layout_height="25dp"
-            android:layout_marginStart="38dp"
-            android:layout_marginTop="51dp"
+            android:layout_width="85sp"
+            android:layout_height="40sp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="24dp"
+            android:background="#b4c5b0"
+            android:gravity="center"
             android:text="작성자"
-            android:textColor="@android:color/darker_gray"
+            android:textColor="@color/black"
             android:textSize="17sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
@@ -148,12 +139,14 @@
 
         <TextView
             android:id="@+id/textView63"
-            android:layout_width="90dp"
-            android:layout_height="25dp"
-            android:layout_marginStart="38dp"
-            android:layout_marginTop="72dp"
+            android:layout_width="85sp"
+            android:layout_height="40sp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="24dp"
+            android:background="#b4c5b0"
+            android:gravity="center"
             android:text="업로드 시간"
-            android:textColor="@android:color/darker_gray"
+            android:textColor="@color/black"
             android:textSize="17sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
@@ -161,15 +154,44 @@
 
         <TextView
             android:id="@+id/detail_uploadtime"
-            android:layout_width="220dp"
-            android:layout_height="25dp"
-            android:layout_marginTop="72dp"
+            android:layout_width="231dp"
+            android:layout_height="40sp"
+            android:layout_marginStart="6dp"
+            android:layout_marginTop="24dp"
             android:background="@color/white"
+            android:gravity="center"
             android:textColor="@color/black"
             android:textSize="17sp"
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@+id/textView63"
             app:layout_constraintTop_toBottomOf="@+id/detail_user" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="320dp"
+            android:layout_height="311dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="13dp"
+            android:layout_marginEnd="18dp"
+            android:background="@color/white"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView64">
+
+            <TextView
+                android:id="@+id/detail_content"
+                android:layout_width="297dp"
+                android:layout_height="286dp"
+                android:layout_marginStart="11dp"
+                android:layout_marginTop="11dp"
+                android:layout_marginEnd="12dp"
+                android:background="@color/white"
+                android:textColor="@color/black"
+                android:textSize="17sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
