--- a/App/app/src/main/res/layout/activity_detail_miss.xml
+++ b/App/app/src/main/res/layout/activity_detail_miss.xml
@@ -6,13 +6,26 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/textView75"
+        android:layout_width="wrap_content"
+        android:layout_height="34dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="11dp"
+        android:text="상세게시물"
+        android:textColor="@color/black"
+        android:textSize="15sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/titlebar" />
+
+    <TextView
         android:id="@+id/textView43"
         android:layout_width="wrap_content"
         android:layout_height="34dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="25dp"
         android:text="실종일시 및 장소"
-        android:textColor="@android:color/darker_gray"
+        android:textColor="@color/black"
         android:textSize="17sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,19 +38,20 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="25dp"
         android:text="실종동물 정보"
-        android:textColor="@android:color/darker_gray"
         android:textSize="17sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView39" />
+        app:layout_constraintTop_toBottomOf="@+id/textView39"
+        tools:textColor="@color/black" />
 
     <TextView
         android:id="@+id/textView42"
         android:layout_width="100sp"
         android:layout_height="34dp"
-        android:background="#eff3f7"
+        android:background="#eef5ed"
         android:gravity="center"
         android:text="중성화 여부"
+        android:textColor="@color/black"
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/detail_gender"
@@ -50,20 +64,22 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="30dp"
         android:text="실종 신고자 정보"
-        android:textColor="@android:color/darker_gray"
         android:textSize="17sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView40" />
+        app:layout_constraintTop_toBottomOf="@+id/textView40"
+        tools:textColor="@color/black" />
 
     <TextView
         android:id="@+id/textView40"
         android:layout_width="100sp"
         android:layout_height="33dp"
-        android:layout_marginStart="20dp"
-        android:background="#eff3f7"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="1dp"
+        android:background="#eef5ed"
         android:gravity="center"
         android:text="특징"
+        android:textColor="@color/black"
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -73,11 +89,12 @@
         android:id="@+id/textView39"
         android:layout_width="100sp"
         android:layout_height="34dp"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="15dp"
         android:layout_marginTop="1dp"
-        android:background="#eff3f7"
+        android:background="#eef5ed"
         android:gravity="center"
         android:text="실종 시간"
+        android:textColor="@color/black"
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -87,11 +104,12 @@
         android:id="@+id/textView38"
         android:layout_width="100sp"
         android:layout_height="34dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="9dp"
-        android:background="#eff3f7"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="3dp"
+        android:background="#eef5ed"
         android:gravity="center"
         android:text="카카오톡 ID"
+        android:textColor="@color/black"
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -101,10 +119,12 @@
         android:id="@+id/textView37"
         android:layout_width="100sp"
         android:layout_height="34dp"
-        android:layout_marginStart="20dp"
-        android:background="#eff3f7"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="1dp"
+        android:background="#eef5ed"
         android:gravity="center"
         android:text="품종"
+        android:textColor="@color/black"
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -114,10 +134,12 @@
         android:id="@+id/textView34"
         android:layout_width="100sp"
         android:layout_height="34dp"
-        android:layout_marginStart="20dp"
-        android:background="#eff3f7"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="1dp"
+        android:background="#eef5ed"
         android:gravity="center"
         android:text="색상"
+        android:textColor="@color/black"
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -127,11 +149,12 @@
         android:id="@+id/textView33"
         android:layout_width="100sp"
         android:layout_height="34dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="19dp"
-        android:background="#eff3f7"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="3dp"
+        android:background="#eef5ed"
         android:gravity="center"
         android:text="실종 장소"
+        android:textColor="@color/black"
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -141,10 +164,12 @@
         android:id="@+id/textView29"
         android:layout_width="100sp"
         android:layout_height="34dp"
-        android:layout_marginStart="20dp"
-        android:background="#eff3f7"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="1dp"
+        android:background="#eef5ed"
         android:gravity="center"
         android:text="성별"
+        android:textColor="@color/black"
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -154,11 +179,12 @@
         android:id="@+id/textView28"
         android:layout_width="100sp"
         android:layout_height="34dp"
-        android:layout_marginTop="15dp"
-        android:background="#eff3f7"
+        android:layout_marginTop="3dp"
+        android:background="#eef5ed"
         android:gravity="center"
-        android:textSize="15sp"
         android:text="나이 "
+        android:textColor="@color/black"
+        android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/detail_name"
         app:layout_constraintTop_toBottomOf="@+id/textView32" />
@@ -167,11 +193,11 @@
         android:id="@+id/detail_neutering"
         android:layout_width="85dp"
         android:layout_height="34dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="35dp"
         android:gravity="center_vertical"
-        android:textStyle="bold"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="34dp"
         android:textSize="15sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/textView42"
         app:layout_constraintTop_toBottomOf="@+id/detail_age" />
 
@@ -179,11 +205,11 @@
         android:id="@+id/detail_name"
         android:layout_width="100sp"
         android:layout_height="34dp"
-        android:textStyle="bold"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="3dp"
         android:gravity="center_vertical"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="15dp"
         android:textSize="15sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/textView24"
         app:layout_constraintTop_toBottomOf="@+id/textView32" />
 
@@ -191,22 +217,23 @@
         android:id="@+id/detail_kakaoId"
         android:layout_width="150dp"
         android:layout_height="34dp"
-        android:textStyle="bold"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="3dp"
         android:gravity="center_vertical"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="9dp"
         android:textSize="15sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/textView38"
         app:layout_constraintTop_toBottomOf="@+id/textView41" />
 
     <TextView
         android:id="@+id/detail_specify"
         android:layout_width="285dp"
-        android:gravity="center_vertical"
         android:layout_height="34dp"
-        android:textStyle="bold"
-        android:layout_marginStart="1dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="1dp"
+        android:gravity="center_vertical"
         android:textSize="15sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/textView37"
         app:layout_constraintTop_toBottomOf="@+id/textView42" />
 
@@ -214,11 +241,10 @@
         android:id="@+id/detail_feature"
         android:layout_width="285dp"
         android:layout_height="50dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginEnd="4dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="1dp"
         android:textSize="15sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView40"
         app:layout_constraintTop_toBottomOf="@+id/detail_specify" />
 
@@ -226,9 +252,9 @@
         android:id="@+id/detail_date"
         android:layout_width="280dp"
         android:layout_height="34dp"
-        android:layout_marginStart="2dp"
-        android:gravity="center_vertical"
+        android:layout_marginStart="5dp"
         android:layout_marginTop="1dp"
+        android:gravity="center_vertical"
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/textView39"
@@ -238,8 +264,8 @@
         android:id="@+id/detail_address"
         android:layout_width="280dp"
         android:layout_height="34dp"
-        android:layout_marginStart="2dp"
-        android:layout_marginTop="19dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="3dp"
         android:gravity="center_vertical"
         android:textSize="15sp"
         android:textStyle="bold"
@@ -250,10 +276,11 @@
         android:id="@+id/detail_gender"
         android:layout_width="100sp"
         android:layout_height="34dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="1dp"
         android:gravity="center_vertical"
-        android:layout_marginStart="1dp"
-        android:textStyle="bold"
         android:textSize="15sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/textView29"
         app:layout_constraintTop_toBottomOf="@+id/detail_farColor1" />
 
@@ -261,11 +288,11 @@
         android:id="@+id/detail_age"
         android:layout_width="85dp"
         android:layout_height="34dp"
-        android:layout_marginStart="1dp"
-        android:textStyle="bold"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="3dp"
         android:gravity="center_vertical"
-        android:layout_marginTop="15dp"
         android:textSize="15sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/textView28"
         app:layout_constraintTop_toBottomOf="@+id/textView32" />
 
@@ -273,7 +300,8 @@
         android:id="@+id/detail_farColor1"
         android:layout_width="200sp"
         android:layout_height="34dp"
-        android:layout_marginStart="1dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="1dp"
         android:gravity="center_vertical"
         android:textSize="15sp"
         android:textStyle="bold"
@@ -283,50 +311,44 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/titlebar"
         android:layout_width="413dp"
-        android:layout_height="90dp"
+        android:layout_height="70sp"
         android:background="#94C67E"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/backbtn"
-            android:layout_width="42dp"
-            android:layout_height="42dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="28dp"
-            android:layout_marginEnd="96dp"
-            app:layout_constraintEnd_toStartOf="@+id/logo"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/backbutton" />
-
-        <ImageView
             android:id="@+id/logo"
-            android:layout_width="104dp"
-            android:layout_height="60dp"
+            android:layout_width="80sp"
+            android:layout_height="48sp"
             android:layout_marginStart="154dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="10dp"
             android:layout_marginEnd="155dp"
+            android:layout_marginBottom="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/img" />
 
         <ImageView
-            android:id="@+id/profile"
-            android:layout_width="70dp"
-            android:layout_height="63dp"
-            android:layout_marginStart="67dp"
-            android:layout_marginTop="19dp"
-            android:layout_marginEnd="34dp"
-            android:layout_marginBottom="20dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/logo"
+            android:id="@+id/backbtn"
+            android:layout_width="42dp"
+            android:layout_height="42dp"
+            android:layout_marginStart="23dp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.666"
+            app:srcCompat="@drawable/backbutton1" />
+
+        <ImageView
+            android:id="@+id/profile"
+            android:layout_width="42sp"
+            android:layout_height="42sp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="23dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/profile" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -335,11 +357,12 @@
         android:id="@+id/textView24"
         android:layout_width="100sp"
         android:layout_height="34dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="15dp"
-        android:background="#eff3f7"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="3dp"
+        android:background="#eef5ed"
         android:gravity="center"
         android:text="이  름 "
+        android:textColor="@color/black"
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -347,12 +370,13 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/detail_recycler"
-        android:layout_width="409dp"
+        android:layout_width="360sp"
         android:layout_height="150dp"
-        android:layout_marginTop="1dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titlebar" />
+        app:layout_constraintTop_toBottomOf="@+id/textView75" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/FindBtn"
@@ -360,8 +384,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="17dp"
-        android:background="@drawable/button_round"
+        android:background="@drawable/rect_round2"
         android:text="찾았어요!"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/deleteBtn" />
 
@@ -372,8 +397,9 @@
         android:layout_marginTop="3dp"
         android:layout_marginEnd="17dp"
         android:layout_marginBottom="3dp"
-        android:background="@drawable/button_round"
+        android:background="@drawable/rect_round2"
         android:text="게시물 삭제"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/FindBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/detail_feature" />
