--- a/App/app/src/main/res/layout/activity_main.xml
+++ b/App/app/src/main/res/layout/activity_main.xml
@@ -11,69 +11,42 @@
         android:id="@+id/Const_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#F5F5F5">
+        android:background="#DDDDDD">
+
+        <TextView
+            android:id="@+id/textView35"
+            android:layout_width="wrap_content"
+            android:layout_height="23dp"
+            android:layout_marginStart="105dp"
+            android:layout_marginTop="4dp"
+            android:text="총 실종 수 : "
+            android:textColor="@color/black"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@+id/menu"
+            app:layout_constraintTop_toBottomOf="@+id/titlebar" />
 
         <TextView
             android:id="@+id/textView47"
             android:layout_width="wrap_content"
             android:layout_height="23dp"
-            android:layout_marginStart="25dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="4dp"
             android:text="총 목격 수 : "
             android:textColor="@color/black"
-            android:textSize="14sp"
+            android:textSize="12sp"
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@+id/totalmiss"
             app:layout_constraintTop_toBottomOf="@+id/titlebar" />
 
         <TextView
-            android:id="@+id/totalfind"
-            android:layout_width="42dp"
-            android:layout_height="23dp"
-            android:textColor="@color/black"
-            android:textSize="14sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toEndOf="@+id/textView47"
-            app:layout_constraintTop_toBottomOf="@+id/titlebar" />
-
-        <TextView
-            android:id="@+id/textView49"
-            android:layout_width="wrap_content"
-            android:layout_height="23dp"
-            android:layout_marginStart="13dp"
-            android:text="목격 완료 수 : "
-            android:textColor="@color/black"
-            android:textSize="14sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toEndOf="@+id/misscomplete"
-            app:layout_constraintTop_toBottomOf="@+id/textView47" />
-
-        <TextView
-            android:id="@+id/findcomplete"
-            android:layout_width="42dp"
-            android:layout_height="23dp"
-            android:textColor="@color/black"
-            android:textSize="14sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toEndOf="@+id/textView49"
-            app:layout_constraintTop_toBottomOf="@+id/totalfind" />
-
-        <TextView
-            android:id="@+id/misscomplete"
-            android:layout_width="48dp"
-            android:layout_height="23dp"
-            android:textColor="@color/black"
-            android:textSize="14sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toEndOf="@+id/textView46"
-            app:layout_constraintTop_toBottomOf="@+id/totalmiss" />
-
-        <TextView
             android:id="@+id/totalmiss"
             android:layout_width="48dp"
             android:layout_height="23dp"
-            android:layout_marginStart="1dp"
+            android:layout_marginStart="2dp"
+            android:layout_marginTop="4dp"
             android:textColor="@color/black"
-            android:textSize="14sp"
+            android:textSize="12sp"
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@+id/textView35"
             app:layout_constraintTop_toBottomOf="@+id/titlebar" />
@@ -82,35 +55,69 @@
             android:id="@+id/textView46"
             android:layout_width="wrap_content"
             android:layout_height="23dp"
-            android:layout_marginStart="35dp"
+            android:layout_marginStart="105dp"
             android:text="실종 완료 수 : "
             android:textColor="@color/black"
-            android:textSize="14sp"
+            android:textSize="12sp"
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@+id/menu"
             app:layout_constraintTop_toBottomOf="@+id/textView35" />
 
         <TextView
-            android:id="@+id/textView35"
-            android:layout_width="wrap_content"
+            android:id="@+id/totalfind"
+            android:layout_width="42dp"
             android:layout_height="23dp"
-            android:layout_marginStart="35dp"
-            android:text="총 실종 수 : "
+            android:layout_marginStart="2dp"
+            android:layout_marginTop="4dp"
             android:textColor="@color/black"
-            android:textSize="14sp"
+            android:textSize="12sp"
             android:textStyle="bold"
-            app:layout_constraintStart_toEndOf="@+id/menu"
+            app:layout_constraintStart_toEndOf="@+id/textView47"
             app:layout_constraintTop_toBottomOf="@+id/titlebar" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/misscomplete"
+            android:layout_width="48dp"
+            android:layout_height="23dp"
+            android:layout_marginStart="2dp"
+            android:textColor="@color/black"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@+id/textView46"
+            app:layout_constraintTop_toBottomOf="@+id/totalmiss" />
+
+        <TextView
+            android:id="@+id/textView49"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
-            android:layout_marginTop="1dp"
+            android:layout_height="23dp"
+            android:layout_marginStart="8dp"
+            android:text="목격 완료 수 : "
+            android:textColor="@color/black"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@+id/misscomplete"
+            app:layout_constraintTop_toBottomOf="@+id/textView47" />
+
+        <TextView
+            android:id="@+id/findcomplete"
+            android:layout_width="42dp"
+            android:layout_height="23dp"
+            android:layout_marginStart="2dp"
+            android:textColor="@color/black"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@+id/textView49"
+            app:layout_constraintTop_toBottomOf="@+id/totalfind" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="121dp"
+            android:layout_height="20dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="10dp"
             android:text="이렇게 대처하세요!"
             android:textColor="@color/black"
-            android:textSize="18sp"
+            android:textSize="15sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/pager" />
@@ -119,41 +126,34 @@
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="284dp"
-            android:layout_marginBottom="5dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="21dp"
             android:text="최근 실종 동물"
             android:textColor="@color/black"
-            android:textSize="18sp"
+            android:textSize="15sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/recyclerHorizon"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
+            app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/menu"
-            android:layout_width="65dp"
-            android:layout_height="45dp"
-            android:layout_marginStart="3dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginEnd="314dp"
+            android:layout_width="50sp"
+            android:layout_height="35sp"
+            android:layout_marginStart="15dp"
 
+            android:layout_marginTop="7dp"
             android:background="@drawable/button_round"
             android:text="메뉴"
             android:textColor="@color/black"
             android:textSize="18sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.083"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/titlebar" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/titlebar"
             android:layout_width="413dp"
-            android:layout_height="90dp"
+            android:layout_height="70sp"
             android:background="#94C67E"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -161,11 +161,13 @@
 
             <ImageView
                 android:id="@+id/logo"
-                android:layout_width="104dp"
-                android:layout_height="60dp"
+                android:layout_width="80sp"
+                android:layout_height="48sp"
                 android:layout_marginStart="154dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginEnd="155dp"
+                android:layout_marginBottom="10dp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -173,18 +175,12 @@
 
             <ImageView
                 android:id="@+id/profile"
-                android:layout_width="70dp"
-                android:layout_height="63dp"
-                android:layout_marginStart="67dp"
-                android:layout_marginTop="19dp"
-                android:layout_marginEnd="34dp"
-                android:layout_marginBottom="20dp"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_width="42sp"
+                android:layout_height="42sp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="23dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toEndOf="@+id/logo"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.25"
                 app:srcCompat="@drawable/profile" />
 
             <TextView
@@ -192,15 +188,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="23dp"
-                android:layout_marginTop="36dp"
-                android:layout_marginEnd="97dp"
+                android:layout_marginTop="16dp"
                 android:text="파인드독"
                 android:textColor="@color/white"
 
-                android:textSize="14sp"
+                android:textSize="12sp"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toStartOf="@+id/logo"
-                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -209,11 +202,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="23dp"
-                android:layout_marginTop="4dp"
+                android:layout_marginTop="8dp"
                 android:text="빠른 실종 반려견 찾기"
 
                 android:textColor="@color/white"
-                android:textSize="14sp"
+                android:textSize="12sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/logo2" />
@@ -222,62 +215,78 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerHorizon"
-            android:layout_width="412dp"
-            android:layout_height="229dp"
-            android:layout_marginTop="1dp"
-            android:layout_marginEnd="1dp"
-            android:layout_marginBottom="1dp"
+            android:layout_width="365sp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
             android:layout_weight="1"
+            android:background="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.285"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView3"
-            app:layout_constraintVertical_bias="1.0" />
+            app:layout_constraintVertical_bias="0.087" />
 
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/pager"
-            android:layout_width="410dp"
-            android:layout_height="160dp"
-            android:layout_marginStart="5dp"
+            android:layout_width="370dp"
+            android:layout_height="200sp"
+            android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
+            android:background="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/menu" />
+            app:layout_constraintTop_toBottomOf="@+id/textView49" />
 
-        <ScrollView
-            android:id="@+id/scrollView2"
-            android:layout_width="350dp"
-            android:layout_height="141dp"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraintLayout3"
+            android:layout_width="371dp"
+            android:layout_height="153dp"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="1dp"
+            android:layout_marginTop="4dp"
             android:layout_marginEnd="20dp"
+            android:background="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView2">
 
-            <TextView
-                android:id="@+id/textView23"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:lineSpacingMultiplier="1.2"
-                android:scrollbars="vertical"
-                android:text="@string/missingtip"
-                android:textSize="15sp"
-                android:textStyle="bold" />
-        </ScrollView>
+            <ScrollView
+                android:id="@+id/scrollView2"
+                android:layout_width="349dp"
+                android:layout_height="126dp"
+                android:layout_marginStart="9dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginEnd="9dp"
+                android:background="@color/white"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <TextView
+                    android:id="@+id/textView23"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:lineSpacingMultiplier="1.1"
+                    android:scrollbars="vertical"
+                    android:text="@string/missingtip"
+                    android:textSize="15sp"
+                    android:textStyle="bold" />
+            </ScrollView>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <TextView
             android:id="@+id/hyperlink"
-            android:layout_width="200dp"
-            android:layout_height="25dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
-            android:layout_marginBottom="2dp"
+            android:layout_marginTop="10dp"
             android:autoLink="web"
             android:textColor="@color/black"
-            android:textSize="18sp"
+            android:textSize="15sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/scrollView2"
-            app:layout_constraintStart_toEndOf="@+id/textView2" />
+            app:layout_constraintStart_toEndOf="@+id/textView2"
+            app:layout_constraintTop_toBottomOf="@+id/pager" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
