--- a/App/app/src/main/res/layout/activity_profile.xml
+++ b/App/app/src/main/res/layout/activity_profile.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F5F5F5"
+    android:background="@color/white"
     tools:context=".ProfileActivity">
 
 
@@ -16,7 +16,7 @@
         android:layout_marginTop="46dp"
         android:layout_marginEnd="13dp"
         android:layout_marginBottom="16dp"
-        android:background="#DAEDD1"
+        android:background="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -29,7 +29,7 @@
             android:layout_marginStart="19dp"
             android:layout_marginTop="108dp"
             android:layout_marginEnd="19dp"
-            android:background="@drawable/rect_round"
+            android:background="@drawable/rect_round3"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.625"
             app:layout_constraintStart_toStartOf="parent"
@@ -42,7 +42,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
                 android:text="회원가입"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/loginButton" />
@@ -72,8 +72,8 @@
                 android:layout_marginTop="4dp"
                 android:background="@color/white"
                 android:elevation="3dp"
-                android:inputType="textPassword"
                 android:hint="password"
+                android:inputType="textPassword"
                 android:padding="10dp"
                 android:textColor="@color/black"
                 android:textSize="16sp"
@@ -86,7 +86,7 @@
                 android:layout_width="222dp"
                 android:layout_height="40dp"
                 android:layout_marginStart="4dp"
-                android:layout_marginTop="80dp"
+                android:layout_marginTop="64dp"
                 android:background="@color/white"
                 android:elevation="3dp"
                 android:hint="example@email.com"
@@ -135,10 +135,10 @@
                 android:layout_width="80dp"
                 android:layout_height="27dp"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="36dp"
+                android:layout_marginTop="20dp"
                 android:layout_marginEnd="261dp"
                 android:text="LOGIN"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:textSize="19sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -152,7 +152,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/titlebar"
         android:layout_width="413dp"
-        android:layout_height="90dp"
+        android:layout_height="70sp"
         android:background="#94C67E"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -161,9 +161,9 @@
 
         <ImageView
             android:id="@+id/HomeButton"
-            android:layout_width="48dp"
-            android:layout_height="44dp"
-            android:layout_marginStart="32dp"
+            android:layout_width="35sp"
+            android:layout_height="35sp"
+            android:layout_marginStart="23dp"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -176,9 +176,9 @@
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="프로필"
+            android:text="마이페이지"
             android:textColor="#F6F4F4"
-            android:textSize="32sp"
+            android:textSize="22sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
