--- a/App/app/src/main/res/layout/finditem.xml
+++ b/App/app/src/main/res/layout/finditem.xml
@@ -9,9 +9,10 @@
         android:id="@+id/findtuploadime"
         android:layout_width="160dp"
         android:layout_height="25dp"
-        android:layout_marginStart="13dp"
+        android:layout_marginStart="5dp"
         android:layout_marginTop="16dp"
-        android:gravity="left"
+        android:gravity="center|left"
+        android:textColor="@color/black"
         android:textSize="12sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/textview2"
@@ -22,10 +23,11 @@
         android:layout_width="57dp"
         android:layout_height="25dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="14dp"
+        android:layout_marginTop="2dp"
         android:background="#eef5ed"
         android:gravity="center"
         android:text="색상1"
+        android:textColor="@color/black"
         android:textSize="12sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/FindImg"
@@ -36,10 +38,11 @@
         android:layout_width="57dp"
         android:layout_height="25dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="14dp"
+        android:layout_marginTop="2dp"
         android:background="#eef5ed"
         android:gravity="center"
         android:text="색상2"
+        android:textColor="@color/black"
         android:textSize="12sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/FindImg"
@@ -54,6 +57,7 @@
         android:background="#eef5ed"
         android:gravity="center"
         android:text="목격 날짜"
+        android:textColor="@color/black"
         android:textSize="12sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/FindImg"
@@ -63,9 +67,10 @@
         android:id="@+id/findcolor2"
         android:layout_width="160dp"
         android:layout_height="25dp"
-        android:layout_marginStart="13dp"
-        android:layout_marginTop="14dp"
-        android:gravity="left"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="2dp"
+        android:gravity="center|left"
+        android:textColor="@color/black"
         android:textSize="12sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/textview3"
@@ -74,10 +79,11 @@
     <TextView
         android:id="@+id/findfeature"
         android:layout_width="160dp"
-        android:layout_height="35dp"
-        android:layout_marginStart="13dp"
-        android:layout_marginTop="14dp"
-        android:gravity="left"
+        android:layout_height="67sp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="2dp"
+        android:gravity="center|left"
+        android:textColor="@color/black"
         android:textSize="12sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/textview"
@@ -86,12 +92,13 @@
     <TextView
         android:id="@+id/textview"
         android:layout_width="57dp"
-        android:layout_height="25dp"
+        android:layout_height="67sp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="14dp"
+        android:layout_marginTop="2dp"
         android:background="#eef5ed"
         android:gravity="center"
         android:text="특징"
+        android:textColor="@color/black"
         android:textSize="12sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/viewbutton2"
@@ -100,12 +107,13 @@
     <TextView
         android:id="@+id/textview100"
         android:layout_width="57dp"
-        android:layout_height="25dp"
+        android:layout_height="45sp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="14dp"
+        android:layout_marginTop="2dp"
         android:background="#eef5ed"
         android:gravity="center"
         android:text="목격 장소"
+        android:textColor="@color/black"
         android:textSize="12sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/FindImg"
@@ -124,10 +132,11 @@
     <TextView
         android:id="@+id/findaddress"
         android:layout_width="160dp"
-        android:layout_height="25dp"
-        android:layout_marginStart="13dp"
-        android:layout_marginTop="14dp"
-        android:gravity="left"
+        android:layout_height="45sp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="2dp"
+        android:gravity="center|left"
+        android:textColor="@color/black"
         android:textSize="12sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/textview100"
@@ -137,9 +146,10 @@
         android:id="@+id/findcolor"
         android:layout_width="160dp"
         android:layout_height="25dp"
-        android:layout_marginStart="13dp"
-        android:layout_marginTop="14dp"
-        android:gravity="left"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="2dp"
+        android:gravity="center|left"
+        android:textColor="@color/black"
         android:textSize="12sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/textview4"
