--- a/App/app/src/main/res/layout/navheader.xml
+++ b/App/app/src/main/res/layout/navheader.xml
@@ -2,57 +2,68 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/login_layout"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
+    android:layout_height="180sp"
     android:background="#D9D9D9"
     android:orientation="vertical"
     android:padding="20dp">
+
+    <TextView
+        android:id="@+id/textView71"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="right"
+        android:text="회원 정보"
+        android:textSize="14sp" />
 
     <TextView
         android:id="@+id/textView9"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="주소"
+        android:textColor="@color/black"
+        android:textSize="16sp"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/address"
-        android:layout_width="372dp"
+        android:layout_width="330sp"
         android:layout_height="wrap_content"
         android:text="null"
-        android:textColor="#000000"
-        android:textSize="20dp"
-        android:textStyle="bold" />
+        android:textSize="14sp"
+        android:textStyle="normal" />
 
     <TextView
         android:id="@+id/textView10"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:text="이메일" />
+        android:text="이메일"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/email"
         android:layout_width="372dp"
         android:layout_height="wrap_content"
         android:text="null"
-        android:textColor="#000000"
-        android:textSize="20dp"
-        android:textStyle="bold" />
+        android:textSize="14sp"
+        android:textStyle="normal" />
 
     <TextView
         android:id="@+id/textView11"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:text="전화번호" />
+        android:text="전화번호"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/phone"
         android:layout_width="375dp"
         android:layout_height="37dp"
         android:text="null"
-        android:textColor="#000000"
-        android:textSize="20dp"
-        android:textStyle="bold" />
+        android:textSize="14sp"
+        android:textStyle="normal" />
 
 </LinearLayout>
